Adding some text in case of a very good defensive roll

--- a/Splittermond/Sheet.html
+++ b/Splittermond/Sheet.html
@@ -2574,6 +2574,11 @@
             {{#rollGreater() Wurf 61}}
                 +17 und mehr
             {{/rollGreater() Wurf 61}}
+            {{#rollGreater() Wurf 29}}
+                <tr><td class="sheet-header" colspan="2">&nbsp;</td></tr>
+                <tr><td class="sheet-header" colspan="2" style="color:#298A08; text-align:center">Herausragend gelungen!</td></tr>
+                <tr><td class="sheet-header" colspan="2" style="text-align:center; font-size:9px">Diese Aktive Abwehr kostet nur 2 Ticks!</td></tr>
+            {{/rollGreater() Wurf 29}}
 </rolltemplate>
 
 <rolltemplate class="sheet-rolltemplate-splittermond_patzer">
