add an init. button

--- a/Mutant Year Zero Alternative/MutantYearZeroAlternative.html
+++ b/Mutant Year Zero Alternative/MutantYearZeroAlternative.html
@@ -42,6 +42,7 @@
                         <tr class="sheet-text-header">
                             <td class="sheet-text-header" colspan="4" style="background-image: url('http://i.imgur.com/NHDGp0U.jpg')">
                                 ATTRIBUTES
+                                <button name="roll_initiative" type='roll' value='&{template:default} {{name=Initiative}} {{Initiative = [[1d6cf0cs0]]}} {{Agility = [[@{agility}]]}}' style="float:right;">initiative</button>
                             </td>
                         </tr>
                         <tr class="sheet-row-dark">
