Adding Roll Template

--- a/Splittermond/Sheet.html
+++ b/Splittermond/Sheet.html
@@ -2980,6 +2980,14 @@
     </table>
 </rolltemplate>
 
+<rolltemplate class="sheet-rolltemplate-splittermond_damage">
+    <table class="sheet-rolltemplate-table-damage">
+        <tr><th colspan="2" class="sheet-header" align="center"><b>{{charactername}}</b></th></tr>
+        <tr><td colspan="2" class="sheet-header" align="center">{{name}}</td></tr>
+        <tr><td width="90%"><b>Schaden</b></td><td width="10%" align="center"><b>{{damage}}</b></td></tr>
+    </table>
+</rolltemplate>
+
 <!-- worker scripts -->
 
 <script type="text/worker">
