uc-561 added name handling

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -7636,10 +7636,10 @@
                 //console.log(`%c MONSTERS Drop: NPC Traits`, "color:cornflowerblue;");
                 let traitsobj     = {};
                 jsonparse(page.data["data-Traits"]).forEach((val) => {
-                    if (val.Desc) {
-                        traitsobj[val.Name] = val.Desc; 
+                    if (val.Name) {
+                        traitsobj[val.Name] = val.Desc | "";
                     } else {
-                        traitsobj[val.Name] = ""; 
+                        console.log(`%c Traits JSON lacks a Name key.`, "color: orange;");
                     };
                 });
                 _.each(traitsobj, (desc, name) => {
