insert weight calculation
insert weight calculation

--- a/NoReturn/NoReturn.html
+++ b/NoReturn/NoReturn.html
@@ -23,9 +23,9 @@
       </div>
       <div class="sheet-row">
         <div class="sheet-item sheet-lable"><label>Größe</label></div>
-        <div class="sheet-item sheet-labletexts"><input type="text" name="attr_groesse" /></div>
+        <div class="sheet-item sheet-labletexts"><input type="text" name="attr_groesse" placeholder="1.80" /></div>
         <div class="sheet-item sheet-lable"><label>Gewicht</label></div>
-        <div class="sheet-item sheet-labletexts"><input type="text" name="attr_gewicht" /></div>
+        <div class="sheet-item sheet-labletexts"><input type="number" name="attr_gewicht" value="(@{st}*3+@{ko}+@{sk})*(@{groesse}*3)" disabled="true" /></div>
         <div class="sheet-item sheet-lable"><label>Haarfarbe</label></div>
         <div class="sheet-item sheet-labletexts"><input type="text" name="attr_haarfarbe" /></div>
         <div class="sheet-item sheet-lable"><label>Augenfarbe</label></div>
