Updated sheet with roll macro for Techniques for easier print between players and DMs.

--- a/L5R 5th Edition Unofficial/L5R-5thEdition.html
+++ b/L5R 5th Edition Unofficial/L5R-5thEdition.html
@@ -587,12 +587,12 @@
                         <fieldset class="repeating_scholar">
                             <div style="width: 100%; height:30px">
                                 <div class="skill-table">
-                                <div>
-                                    <div class="display-inline skill-div-field-name"><input style="width: 100%" type="text" name="attr_scholar_skill" value=""></div>
-                                    <div class="display-inline skill-div-field-input"><input type="number" name="attr_scholar_rank" value="0"/></div>
-                                    <div class="display-inline skill-div-field-input"><input type="number" name="attr_scholar_bonus_dice" value="0"></div>
-                                    <div class="display-inline skill-div-field-roll"><button type="roll" value="&{template:l5r5th} {{name=@{scholar_skill}}} {{r0=[[?{Choose Approach|Air,@{air}|Earth,@{earth}|Fire,@{fire}|Water,@{water}|Void,@{void}|None,0}]]}} {{s0=[[@{scholar_rank}+@{scholar_bonus_dice}]]}} {{r1=[[1d6]]}} {{r2=[[1d6]]}} {{r3=[[1d6]]}} {{r4=[[1d6]]}} {{r5=[[1d6]]}} {{r6=[[1d6]]}} {{r7=[[1d6]]}} {{r8=[[1d6]]}} {{r9=[[1d6]]}} {{r10=[[1d6]]}} {{s1=[[1d12]]}} {{s2=[[1d12]]}} {{s3=[[1d12]]}} {{s4=[[1d12]]}} {{s5=[[1d12]]}} {{s6=[[1d12]]}} {{s7=[[1d12]]}} {{s8=[[1d12]]}} {{s9=[[1d12]]}} {{s10=[[1d12]]}}"></button></div>
-                                </div>				
+                                    <div>
+                                        <div class="display-inline skill-div-field-name"><input style="width: 100%" type="text" name="attr_scholar_skill" value=""></div>
+                                        <div class="display-inline skill-div-field-input"><input type="number" name="attr_scholar_rank" value="0"/></div>
+                                        <div class="display-inline skill-div-field-input"><input type="number" name="attr_scholar_bonus_dice" value="0"></div>
+                                        <div class="display-inline skill-div-field-roll"><button type="roll" value="&{template:l5r5th} {{name=@{scholar_skill}}} {{r0=[[?{Choose Approach|Air,@{air}|Earth,@{earth}|Fire,@{fire}|Water,@{water}|Void,@{void}|None,0}]]}} {{s0=[[@{scholar_rank}+@{scholar_bonus_dice}]]}} {{r1=[[1d6]]}} {{r2=[[1d6]]}} {{r3=[[1d6]]}} {{r4=[[1d6]]}} {{r5=[[1d6]]}} {{r6=[[1d6]]}} {{r7=[[1d6]]}} {{r8=[[1d6]]}} {{r9=[[1d6]]}} {{r10=[[1d6]]}} {{s1=[[1d12]]}} {{s2=[[1d12]]}} {{s3=[[1d12]]}} {{s4=[[1d12]]}} {{s5=[[1d12]]}} {{s6=[[1d12]]}} {{s7=[[1d12]]}} {{s8=[[1d12]]}} {{s9=[[1d12]]}} {{s10=[[1d12]]}}"></button></div>
+                                    </div>				
                                 </div>
                             </div>			
                         </fieldset>
@@ -1043,7 +1043,10 @@
                         <div>    
                             <textarea class="techniques-box" name="attr_new_opportunity_box" data-i18n-placeholder="new-opportunity-box-u" placeholder="Add new opportunities"></textarea>
                         </div>
+                        <div style="margin-bottom: 5px;">    
+                            <div class="technique-roll"><button class="technique-roll-button" type="roll" value="&{template:l5r5th} {{sub-title=(Action)}} {{name=@{technique_name}}} {{check=@{activation_field}}} {{page=@{technique_page_number}}} {{effects=@{effects_box}}} {{opportunities=@{new_opportunity_box}}}"><span class="print-technique" data-i18n="print-technique-u">Print technique in chat</span></button></div>      
                         </div>
+                    </div>
                 </fieldset>
             </div>
             <div class="col techniques-col" style="margin-left: 0px;">
@@ -1071,6 +1074,9 @@
                         </div>
                         <div>    
                             <textarea class="techniques-box" name="attr_new_opportunity_2_box" data-i18n-placeholder="new-opportunity-box-u" placeholder="Add new opportunities"></textarea>
+                        </div>
+                        <div style="margin-bottom: 5px; margin-right: 1px">    
+                            <div class="technique-roll"><button class="technique-roll-button" type="roll" value="&{template:l5r5th} {{sub-title=(Opportunity)}} {{name=@{technique_new_op_name}}} {{check2=@{check_field}}} {{page=@{technique_page_new_op_number}}} {{opportunities=@{new_opportunity_2_box}}}"><span class="print-technique" data-i18n="print-technique-u">Print technique in chat</span></button></div>      
                         </div>
                     </div>
                 </fieldset>
@@ -1141,6 +1147,9 @@
 <rolltemplate class="sheet-rolltemplate-l5r5th">
     <img class="top-roll-bar" src="http://suanho.com/sheet-assets/top-roll-bar.png">
     <h2 class="caption">{{name}}</h2>
+    {{#sub-title}}
+    <h3 class="sub-title">{{sub-title}}{{#page}} - page {{page}}{{/page}}</h3>
+    {{/sub-title}}
     <div class="result">
         <div class="template-line"></div>
         <div class='template-ring-rolls'>
@@ -1666,7 +1675,40 @@
             {{/rollGreater() s0 9}}
             <!-- End s0 = 10 -->
         </div>
+        {{#check}} 
+        <div class="template-check">
+            <span style="font-weight: bold" data-i18n="activation:-u">Activation:</span>
+            <span>{{check}}</span>
+        </div>
+        {{/check}}
+        {{#check2}} 
+        <div class="template-check">
+            <span style="font-weight: bold" data-i18n="check:-u">Check:</span>
+            <span>{{check2}}</span>
+        </div>
+        {{/check2}}
+        {{#effects}}
+        <div class="template-effects">
+            <span style="font-weight: bold" data-i18n="effects:-u">Effects:</span>
+            <span>{{effects}}</span>
+        </div>
+        {{/effects}}
+        {{#opportunities}}
+        <div class="template-opportunities">
+            <span style="font-weight: bold" data-i18n="opportunities:-u">Opportunities:</span>
+            <span>{{opportunities}}</span>
+        </div>
+        {{/opportunities}}
+
+        {{#rollGreater() r0 0}} 
         <span style="font-size:11px" data-i18n="roll-explosive-dice-u">To roll explosive dice, click 'Roll Ring/Skill Dice' button on your sheet</span>
+        {{/rollGreater() r0 0}}
+
+        {{^r0}} 
+        {{#rollGreater() s0 0}} 
+        <span style="font-size:11px" data-i18n="roll-explosive-dice-u">To roll explosive dice, click 'Roll Ring/Skill Dice' button on your sheet</span>
+        {{/rollGreater() s0 0}}
+        {{/r0}}
     </div>
 </rolltemplate>
 
