CoC7 Added Archetype and Talents for Pulp Cthulhu
Introduced two new fields for Pulp Cthulhu compatibility.

--- a/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
+++ b/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
@@ -26,6 +26,10 @@
                     <td colspan=3><input type="text" name="attr_sex" style="width:100%"></td>
                 </tr>
                 <tr>
+                    <td><span data-i18n="Archetype">Archetype</span> </td>
+                    <td colspan=3><input type="text" name="attr_archetype" style="width:100%"></td>
+                </tr>
+                <tr>
                     <td><span data-i18n="Residence">Residence</span> </td>
                     <td colspan="3"><input type="text" name="attr_residence" style="width:100%"></td>
                 </tr>
@@ -803,7 +807,7 @@
     <div class='sheet-col'>
         <h4 class="section-head"><span data-i18n="GearAndPosessions">Gear and Posessions</span></h4>
         <div class="sheet-section">
-            <textarea name="attr_gear_and_posessions" style="width:97%;height:180px"></textarea>
+            <textarea name="attr_gear_and_posessions" style="width:97%;height:343px"></textarea>
         </div>
     </div>
     <div class='sheet-col'>
@@ -825,6 +829,12 @@
                     <td colspan="2"><textarea style="width:98%;height:100px" name="attr_assets"></textarea></td>
                 </tr>
             </table>
+        </div>
+        <h4 class="section-head"><span data-i18n="Talents">Talents</span></h4>
+        <div class="sheet-section">
+            <div class="sheet-section">
+            	<textarea name="attr_talents" style="width:97%;height:100px"></textarea>
+        	</div>
         </div>
     </div>
 </div>
