CoC7 Calculation of 20% Sanity
Added automatic calculation of 20% Sanity (current / total)

--- a/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
+++ b/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
@@ -176,9 +176,17 @@
                     </td>
                 </tr>
                 <tr>
+                	<td colspan="9">
+                		20%&nbsp;
+                		<span data-i18n="fromCurrent">from current</span>: <span id="sanityFromCurrent" name="attr_sancur_partial">0</span>
+                		&nbsp;/&nbsp;<span data-i18n="fromStart">from start</span>: <span id="sanityFromStart" name="attr_sanstart_partial">0</span>
+                	</td>
+                </tr>
+                <tr>
                     <td colspan="4">
                         <input type="checkbox" value="1" name="attr_temp_insane"> <span data-i18n="TempInsane">Temp. Insane</span>
                     </td>
+                    <td colspan="1"></td>
                     <td colspan="4">
                         <input type="checkbox" value="1" name="attr_indef_insane"> <span data-i18n="IndefInsane">Indef. Insane</span>
                     </td>
@@ -867,6 +875,23 @@
         </div>
     </div>
 </div>
+
+<script type="text/worker">
+
+on("sheet:opened change:san change:san_start", function() {
+	getAttrs(["san", "san_start"], function(values) {
+      console.log(values.san);
+      setAttrs({
+      	  	sancur_partial: Math.floor(values.san / 5),
+      		sanstart_partial: Math.floor(values.san_start / 5)
+	  });
+   });
+});
+
+// ... etc
+
+</script>
+
 
 <!--
 &{template:coc} {{name=Test}} {{success=[[50]]}} {{hard=[[floor(50/2)]]}} {{extreme=[[floor(50/5)]]}} {{roll1=[[1d100]]}} {{roll2=[[1d100]]}} {{roll3=[[1d100]]}}
