--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -272,17 +272,19 @@
                     <input class="input-number" type="text" name="attr_heal_total" value="0" title="@{heal_total}" readonly />
                 </span>
                 <fieldset class="repeating_skills">
-                    <input type="text" name="attr_name" title="@{repeating_skills_$X_name}" value="" />
-                    <select name="skill_attribute">
-                        <option data-i18n="strength-abbr" value="@{strength_total}">str</option>
-                        <option data-i18n="agility-abbr" value="@{agility_total}">agi</option>
-                        <option data-i18n="wits-abbr" value="@{wits_total}">wit</option>
-                        <option data-i18n="empathy-abbr" value="@{empathy_total}">emp</option>
-                    </select>
-                    <input class="input-number" type="text" name="attr_skill" value="0" title="@{skill}" readonly />
-                    <span class="equal">=</span>
-                    <input class="input-number" type="text" name="attr_skill_total" value="0" title="@{skill_total}" readonly />
-                    <button type="action" name="act_dice_pool_skill">t</button>
+                    <div class="repeating-skill-grid">
+                        <input type="text" name="attr_name" title="@{repeating_skills_$X_name}" value="" />
+                        <select name="skill_attribute">
+                            <option data-i18n="strength-abbr" value="@{strength_total}">str</option>
+                            <option data-i18n="agility-abbr" value="@{agility_total}">agi</option>
+                            <option data-i18n="wits-abbr" value="@{wits_total}">wit</option>
+                            <option data-i18n="empathy-abbr" value="@{empathy_total}">emp</option>
+                        </select>
+                        <input class="input-number" type="text" name="attr_skill" value="0" title="@{skill}" readonly />
+                        <span class="equal">=</span>
+                        <input class="input-number" type="text" name="attr_skill_total" value="0" title="@{skill_total}" readonly />
+                        <button type="action" name="act_dice_pool_skill">t</button>
+                    </div>
                 </fieldset>
 			</div>    
         </div>
@@ -411,17 +413,17 @@
             <div class="mutants-grid">
                 <div class="mutant-box header"><h1 data-i18n="mutantions">MUTANTIONS</h1></div>
                 <div class="dots">
-                    <input name="attr_mutation" type="radio" value="0"/>
-                    <input name="attr_mutation" type="radio" value="1" checked/><span></span>
-                    <input name="attr_mutation" type="radio" value="2"/><span></span>
-                    <input name="attr_mutation" type="radio" value="3"/><span></span>
-                    <input name="attr_mutation" type="radio" value="4"/><span></span>
-                    <input name="attr_mutation" type="radio" value="5"/><span></span>
-                    <input name="attr_mutation" type="radio" value="6"/><span></span>
-                    <input name="attr_mutation" type="radio" value="7"/><span></span>
-                    <input name="attr_mutation" type="radio" value="8"/><span></span>
-                    <input name="attr_mutation" type="radio" value="9"/><span></span>
-                    <input name="attr_mutation" type="radio" value="10"/><span></span>
+                    <input name="attr_mutation" type="radio" value="0" checked/><span>0</span>
+                    <input name="attr_mutation" type="radio" value="1"/><span>1</span>
+                    <input name="attr_mutation" type="radio" value="2"/><span>2</span>
+                    <input name="attr_mutation" type="radio" value="3"/><span>3</span>
+                    <input name="attr_mutation" type="radio" value="4"/><span>4</span>
+                    <input name="attr_mutation" type="radio" value="5"/><span>5</span>
+                    <input name="attr_mutation" type="radio" value="6"/><span>6</span>
+                    <input name="attr_mutation" type="radio" value="7"/><span>7</span>
+                    <input name="attr_mutation" type="radio" value="8"/><span>8</span>
+                    <input name="attr_mutation" type="radio" value="9"/><span>9</span>
+                    <input name="attr_mutation" type="radio" value="10"/><span>10</span>
                 </div>
                 <div class="talents-box4">
                     <fieldset class="repeating_mutantions">
@@ -480,20 +482,23 @@
             <div class="rot-grid">
                 <div class="rot-box header"><h1 data-i18n="rot-p">ROT POINTS</h1></div>
                 <div class="dots">
-                    <input name="attr_rot" type="radio" value="0"/>
-                    <input name="attr_rot" type="radio" value="1" checked/><span></span>
-                    <input name="attr_rot" type="radio" value="2"/><span></span>
-                    <input name="attr_rot" type="radio" value="3"/><span></span>
-                    <input name="attr_rot" type="radio" value="4"/><span></span>
-                    <input name="attr_rot" type="radio" value="5"/><span></span>
-                    <input name="attr_rot" type="radio" value="6"/><span></span>
-                    <input name="attr_rot" type="radio" value="7"/><span></span>
-                    <input name="attr_rot" type="radio" value="8"/><span></span>
-                    <input name="attr_rot" type="radio" value="9"/><span></span>
-                    <input name="attr_rot" type="radio" value="10"/><span></span>
+                    <input name="attr_rot" type="radio" value="0" checked /><span>0</span>
+                    <input name="attr_rot" type="radio" value="1"/><span>1</span>
+                    <input name="attr_rot" type="radio" value="2"/><span>2</span>
+                    <input name="attr_rot" type="radio" value="3"/><span>3</span>
+                    <input name="attr_rot" type="radio" value="4"/><span>4</span>
+                    <input name="attr_rot" type="radio" value="5"/><span>5</span>
+                    <input name="attr_rot" type="radio" value="6"/><span>6</span>
+                    <input name="attr_rot" type="radio" value="7"/><span>7</span>
+                    <input name="attr_rot" type="radio" value="8"/><span>8</span>
+                    <input name="attr_rot" type="radio" value="9"/><span>9</span>
+                    <input name="attr_rot" type="radio" value="10"/><span>10</span>
                 </div>
-                <button name="attr_rot" type="roll" value="[[@{rot}d6cs0cf1">y</button>
-                <input class="input-number" type="number" name="attr_rot_permenant" value="0" min="0" title="@{rot_permenant}" />
+                <label title="permaneant rot">
+                    <span data-i18n="permaneant-rot">permaneant rot</span>
+                    <input class="input-number" type="number" name="attr_rot_permenant" value="0" min="0" title="@{rot_permenant}" />
+                </label>
+                <button class="dicefontd6" name="attr_rot" type="roll" value="[[@{rot}d6cs0cf1">L</button>
             </div>
         </div>
         <div class="box character-experience">
@@ -504,17 +509,17 @@
             </div>
         </div>
         <div class="experience-dots dots">
-            <input name="attr_experience" type="radio" value="0"/>
-            <input name="attr_experience" type="radio" value="1" checked/><span></span>
-            <input name="attr_experience" type="radio" value="2"/><span></span>
-            <input name="attr_experience" type="radio" value="3"/><span></span>
-            <input name="attr_experience" type="radio" value="4"/><span></span>
-            <input name="attr_experience" type="radio" value="5"/><span></span>
-            <input name="attr_experience" type="radio" value="6"/><span></span>
-            <input name="attr_experience" type="radio" value="7"/><span></span>
-            <input name="attr_experience" type="radio" value="8"/><span></span>
-            <input name="attr_experience" type="radio" value="9"/><span></span>
-            <input name="attr_experience" type="radio" value="10"/><span></span>
+            <input name="attr_experience" type="radio" value="0" checked />
+            <input name="attr_experience" type="radio" value="1" checked/><span>0</span>
+            <input name="attr_experience" type="radio" value="2"/><span>1</span>
+            <input name="attr_experience" type="radio" value="3"/><span>2</span>
+            <input name="attr_experience" type="radio" value="4"/><span>3</span>
+            <input name="attr_experience" type="radio" value="5"/><span>4</span>
+            <input name="attr_experience" type="radio" value="6"/><span>5</span>
+            <input name="attr_experience" type="radio" value="7"/><span>6</span>
+            <input name="attr_experience" type="radio" value="8"/><span>7</span>
+            <input name="attr_experience" type="radio" value="9"/><span>8</span>
+            <input name="attr_experience" type="radio" value="10"/><span>10</span>
         </div>
         <div class="box character-weapons">
             <div class="weapons-grid">
