uc-572 hot fix for npc traits

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -7642,7 +7642,7 @@
                     } else if (val.Name) {
                         traitsobj[val.Name] = ""; 
                     } else {
-                        console.log(`%c Trait in JSON is lacking Name key`, "color: orange;")
+                        console.log(`%c Traits JSON is lacking a Name key`, "color: orange;")
                     };
                 });
                 _.each(traitsobj, (desc, name) => {
