--- a/Fallout D10/Fallout d10.html
+++ b/Fallout D10/Fallout d10.html
@@ -188,7 +188,7 @@
     </table>
     <br>
     <h3 style="width:98%">Experience</h3>
-    <table class="sheet-center" style="width:98%">
+    <table class="sheet-center">
         <tr>
             <td>Experience Points</td>
             <td><input type="number" class="sheet-number" name="attr_experience" value="0" style="width:100px"  /></td>
@@ -936,7 +936,7 @@
 
 <div class="sheet-tab-content sheet-tab5">
     <h3 style="width:98%">Implants</h3>
-    <table class="sheet-center" style="width:98%">
+    <table class="sheet-center">
         <tr>
             <td>Implant Endurance (IE)</td>
             <td><input type="number" class="sheet-number" name="attr_ie" value="0" style="width:80px"  /></td>
@@ -1018,7 +1018,7 @@
     </table>
     <br>
     <h3 style="width:98%">Inventory</h3>
-    <table class="sheet-center" style="width:98%">
+    <table class="sheet-center">
         <tr>
             <td>Caps</td>
             <td><input type="number" class="sheet-number" name="attr_caps" value="0" style="width:40%"  /></td>
@@ -1041,7 +1041,7 @@
     </table>
         <br>
     <fieldset class="repeating_traits">
-        <table class="sheet-center" style="width:100%">
+        <table class="sheet-center">
             <tr>
                 <td>Item Name</td>
                 <td><input type="text" class="sheet-number" name="attr_item_name" /></td>
