Small update to NPC-sheet to only show demeanor-adjustment-boxes when choosing "Custom demeanor" in the "Choose demeanor field"

--- a/L5R 5th Edition Unofficial/L5R-5thEdition.html
+++ b/L5R 5th Edition Unofficial/L5R-5thEdition.html
@@ -2764,7 +2764,8 @@
                     <h3 class="text-center-aligned" data-i18n="choose-demeanor-u">Choose demeanor</h3>
                 </div>
                 <div class="row">
-                    <select class="select-demeanor" name="attr_demeanor_choice">
+                    <select class="select-demeanor" name="attr_demeanor_choice" required>
+                        <option value="" data-i18n="demeanor-custom-u">Custom demeanor</option>
                         <option value="1" data-i18n="demeanor-ambitious-u">Ambitious - Fire +2, Water -2</option>
                         <option value="2" data-i18n="demeanor-assertive-u">Assertive - Earth +2, Air -2</option>
                         <option value="3" data-i18n="demeanor-covetous-u">Covetous - Earth +2, Water -2</option>
@@ -2778,49 +2779,48 @@
                         <option value="11" data-i18n="demeanor-shrewd-u">Shrewd - Air +2, Fire -2</option>
                         <option value="12" data-i18n="demeanor-skittish-u">Skittish - Fire +2, Earth -2</option>
                         <option value="13" data-i18n="demeanor-territorial-u">Territorial - Fire +2, Air -2</option>
-                        <option value="0" data-i18n="demeanor-custom-u">Custom demeanor</option>
                     </select>
-                </div>
-                <div class="row">
-                    <div class="col npc-bonus-ring-field simple-gray-border no-right-border" style="background:#ab9bb2">
-                        <div class="col">
-                            <label>
-                                <span data-i18n="air-u">Air</span>
-                                <input class="no-arrows" type="number" name="attr_bonus_npc_air" value="0">
-                            </label>
-                        </div>    
-                    </div>
-                    <div class="col npc-bonus-ring-field simple-gray-border no-right-border" style="background:#8ba28c">
-                        <div class="col">
-                            <label>
-                                <span data-i18n="earth-u">Earth</span>
-                                <input class="no-arrows" type="number" name="attr_bonus_npc_earth" value="0">
-                            </label>
-                        </div>    
-                    </div>
-                    <div class="col npc-bonus-ring-field simple-gray-border no-right-border" style="background:#a5936f">
-                        <div class="col">
-                            <label>
-                                <span data-i18n="fire-u">Fire</span>
-                                <input class="no-arrows" type="number" name="attr_bonus_npc_fire" value="0">
-                            </label>
-                        </div>    
-                    </div>
-                    <div class="col npc-bonus-ring-field simple-gray-border no-right-border" style="background:#7a9da0">
-                        <div class="col">
-                            <label>
-                                <span data-i18n="water-u">Water</span>
-                                <input class="no-arrows" type="number" name="attr_bonus_npc_water" value="0">
-                            </label>
-                        </div>    
-                    </div>
-                    <div class="col npc-bonus-ring-field simple-gray-border no-right-border" style="background:#72736e">
-                        <div class="col">
-                            <label>
-                                <span data-i18n="void-u">Void</span>
-                                <input class="no-arrows" type="number" name="attr_bonus_npc_void" value="0">
-                            </label>
-                        </div>    
+                    <div class="row demeanor-boxes full-width">
+                        <div class="col npc-bonus-ring-field simple-gray-border no-right-border" style="background:#ab9bb2">
+                            <div class="col">
+                                <label>
+                                    <span data-i18n="air-u">Air</span>
+                                    <input class="no-arrows" type="number" name="attr_bonus_npc_air" value="0">
+                                </label>
+                            </div>    
+                        </div>
+                        <div class="col npc-bonus-ring-field simple-gray-border no-right-border" style="background:#8ba28c">
+                            <div class="col">
+                                <label>
+                                    <span data-i18n="earth-u">Earth</span>
+                                    <input class="no-arrows" type="number" name="attr_bonus_npc_earth" value="0">
+                                </label>
+                            </div>    
+                        </div>
+                        <div class="col npc-bonus-ring-field simple-gray-border no-right-border" style="background:#a5936f">
+                            <div class="col">
+                                <label>
+                                    <span data-i18n="fire-u">Fire</span>
+                                    <input class="no-arrows" type="number" name="attr_bonus_npc_fire" value="0">
+                                </label>
+                            </div>    
+                        </div>
+                        <div class="col npc-bonus-ring-field simple-gray-border no-right-border" style="background:#7a9da0">
+                            <div class="col">
+                                <label>
+                                    <span data-i18n="water-u">Water</span>
+                                    <input class="no-arrows" type="number" name="attr_bonus_npc_water" value="0">
+                                </label>
+                            </div>    
+                        </div>
+                        <div class="col npc-bonus-ring-field simple-gray-border no-right-border" style="background:#72736e">
+                            <div class="col">
+                                <label>
+                                    <span data-i18n="void-u">Void</span>
+                                    <input class="no-arrows" type="number" name="attr_bonus_npc_void" value="0">
+                                </label>
+                            </div>    
+                        </div>
                     </div>
                 </div>
             </div>
@@ -2917,7 +2917,6 @@
                     </div>
                 </div>
             </div>
-            
         </div>
 
         <div class="20-qs-middle-line"></div>
