[Fix] Ingéniosité Roll

--- a/Naheulbeuk/Naheulbeuk.html
+++ b/Naheulbeuk/Naheulbeuk.html
@@ -217,7 +217,7 @@
 								<td colspan="4">&nbsp;</td>
 							</tr>
 							<tr>
-								<th title="Chance de réussir une Confection"><button type="roll" value="@{displayJet} &{template:default} {{name=@{Personnage_Nom} tente une confection}} {{ Magie&nbsp;Phys=@{Stats_Inge_total} }} {{ Résultat=[[1d20cs<1cf>20]] }}" name="roll_Ingeniosite"> Ingéniosité</button></th>
+								<th title="Chance de réussir une Confection"><button type="roll" value="@{displayJet} &{template:default} {{name=@{Personnage_Nom} tente une confection}} {{ Ingéniosité=@{Stats_Inge_total} }} {{ Résultat=[[1d20cs<1cf>20]] }}" name="roll_Ingeniosite"> Ingéniosité</button></th>
 								<td><input type="text" class="sheet-autoCalc" name="attr_Stats_Inge_total" value="0" readonly></td>
 								<td><input type="text" class="sheet-autoCalc" name="attr_Stats_Inge" value="0" readonly></td>
 								<td><input type="number" name="attr_Stats_Inge_mod" value="0"></td>
