Add new stats to Coup spécial rolls

--- a/Naheulbeuk/Naheulbeuk.html
+++ b/Naheulbeuk/Naheulbeuk.html
@@ -537,8 +537,11 @@
 										<option value="AT : [[ @{Stats_Attaque_total} + @{CoupSpecial_Mod} ]]">AT</option>
 										<option value="PRD : [[ @{Stats_Parade_total} + @{CoupSpecial_Mod} ]]">PRD</option>
 										<option value="ESQ : [[ @{Stats_Esquive_total} + @{CoupSpecial_Mod} ]]">ESQ</option>
-										<option value="FO : [[ @{Stats_Force_total} + @{CoupSpecial_Mod} ]]">FO</option>
+										<option value="COU : [[ @{Stats_Courage_total} + @{CoupSpecial_Mod} ]]">COU</option>
+										<option value="INT : [[ @{Stats_Intelligence_total} + @{CoupSpecial_Mod} ]]">INT</option>
+										<option value="CHA : [[ @{Stats_Charisme_total} + @{CoupSpecial_Mod} ]]">CHA</option>
 										<option value="AD : [[ @{Stats_Adresse_total} + @{CoupSpecial_Mod} ]]">AD</option>
+										<option value="FO : [[ @{Stats_Force_total} + @{CoupSpecial_Mod} ]]">FO</option>
 										<option value="JET : [[ @{Stats_Jet_total} + @{CoupSpecial_Mod} ]]">JET</option>
 										<option value="AD/FO : [[ ceil((@{Stats_Force_total}+@{Stats_Adresse_total})/2) + @{CoupSpecial_Mod} ]] ">AD/FO</option>
 									</select>
